Wed Jul 02 15:43:01 2003  George Lebl <jirka@5z.com>

	* stickynotes.c, stickynotes_applet.c,
	  stickynotes_applet_callbacks.c:  Follow key-writability
	  for preference keys

2003-07-02  Loban Rahman <loban@earthling.net>

	* stickynotes_applet.c, stickynotes_applet_callbacks.c: Pressing
	  ENTER will now correctly do the equivalent of left clicking the
	  applet.
	* pixmaps/*: Renamed lock.png and unlock.png to locked.png and
	  unlocked.png to more accurately describe their usage.

Fri Jun 27 12:01:07 2003  Jonathan Blandford  <jrb@redhat.com>

	* stickynotes.c (stickynote_new): remove note->focused call, as it
	breaks compilation and doesn't seem to fit anywhere.

2003-06-16  Dennis Cranston <dennis_cranston at yahoo com>

	* stickynotes.glade:  Fix mnemonic conflicts for Height/Help 
	& Color/Close again!  
	  
2003-06-15  Kevin Vandersloot

	* stickynotes_applet.c: expand the applet for Fitts' law complience.

2003-06-13 Loban A Rahman <loban@earthling.net>

	* stickynotes.glade: Revised labels to get rid of "&"'s.
	  Fixes bug #114367.
	* stickynotes_applet.c: When (un)locking individual notes, the
	  "locked" checkmenuitem in the applet menu is marked "inconsistent"
	  if it is inconsistent. NOTE: Does not work complete correctly yet.
	* stickynotes.schemas.in: Fixed spelling typo.

2003-06-08  Kevin Vandersloot

	* stickynotes_applet.c: Expand the applet for Fitts' law complience.

2003-06-02  Loban A Rahman <loban@earthling.net>

	* stickynotes.glade: Revised tooltips

2003-06-01  Kevin Vandersloot
	
	* docs/C/Makefile.am: fix build where a figure is not 
	included

2003-05-28 Loban A Rahman <loban@earthling.net>

	* pixmaps/resize_*.png: Changed look again.
	* docs/C/stickynotes_applet.xml: Got rid of a roque "&".

2003-05-27  Loban A Rahman <loban@earthling.net>

	* stickynotes.c, stickynotes_applet.*: Icon size is no longer huge.
	* pixmaps/resize_*.png: Changed look.
	* stickynotes.c: Got rid of infinite loop when changing note
	  properties.