@@ -1,3 +1,9 @@
+2003-07-03  Loban Rahman <loban@earthling.net>
+	* stickynotes_applet_callbacks.c: The resize bar and window
+	  decorations now appear and disapper on mouseover AND focus
+	  correctly. Basically, they will always appear if it is in either
+	  mouseover or focus. Fixes bug #115317.
+	
 Wed Jul 02 15:43:01 2003  George Lebl <jirka@5z.com>
 
 	* stickynotes.c, stickynotes_applet.c,
